[project]
name = "thesis-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "simpy>=4.1.1",
    "threadpoolctl>=3.6.0",
    "xgboost>=3.2.0",
]
